<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.trydent</groupId>
  <artifactId>jpms-graalvm-httpserver</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <entrypoint>io.trydent.httpserver.Main</entrypoint>
    <bouncycastle.version>1.76</bouncycastle.version>
    <acme4j-client.version>2.16</acme4j-client.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
      <version>${bouncycastle.version}</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk18on</artifactId>
      <version>${bouncycastle.version}</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcutil-jdk18on</artifactId>
      <version>1.76</version>
    </dependency>
    <dependency>
      <groupId>org.shredzone.acme4j</groupId>
      <artifactId>acme4j-client</artifactId>
      <version>${acme4j-client.version}</version>
    </dependency>
  </dependencies>

  <build>
    <finalName>httpserver</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <compilerArgs>
            <arg>--enable-preview</arg>
            <arg>-Xpkginfo:always</arg>
            <!--<arg>-Xlint:preview</arg>-->
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jlink-plugin</artifactId>
        <version>3.1.0</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <id>package</id>
            <phase>package</phase>
            <goals>
              <goal>jlink</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <ignoreSigningInformation>true</ignoreSigningInformation>
          <verbose>true</verbose>
          <includeLocales>
            <locale>it</locale>
          </includeLocales>
          <noHeaderFiles>true</noHeaderFiles>
          <stripDebug>true</stripDebug>
          <noManPages>true</noManPages>
          <modulePaths>
            <modulePath>${java.home}/jmods</modulePath>
          </modulePaths>
          <addOptions>
            <addOption>"--enable-preview -XX:+DoEscapeAnalysis -XX:+UseStringDeduplication -XX:+UseCompressedOops -XX:+UseZGC -XX:+ZGenerational -Xms64m -Xmx128m -ea -Dfile.encoding=UTF-8"</addOption>
          </addOptions>
          <classifier>dist-${os.arch}</classifier>
          <launcher>httpserver=httpserver/${entrypoint}</launcher>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.9.23</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
              </execution>
              <execution>
                <id>test-native</id>
                <goals>
                  <goal>test</goal>
                </goals>
                <phase>test</phase>
              </execution>
            </executions>
            <configuration>
              <buildArgs>--enable-preview -H:+UnlockExperimentalVMOptions --enable-all-security-services -H:+ReportUnsupportedElementsAtRuntime -H:IncludeResources=.*io/trydent/httpserver/web/.*$ -H:IncludeResources=.*io/trydent/httpserver/cert/.*$</buildArgs>
              <imageName>${project.build.finalName}</imageName>
              <mainClass>${entrypoint}</mainClass>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
